fix: z-index not set properly in mass action menu & add download all function

--- a/web/src/features/queue/queue.scss
+++ b/web/src/features/queue/queue.scss
@@ -19,6 +19,7 @@
       opacity: 0;
       transform: translate(-50%, 20px) scale(0.9);
       transition: var(--transition);
+      z-index: 100;
 
       &.queue__mass-actions--active {
         transform: translate(-50%, 0) scale(1);
